feat(storages.cold-archive): tracking
ref: MANAGER-11283

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/users/users.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/users/users.html
@@ -19,6 +19,7 @@
     data-ng-if="$ctrl.userDetails"
     data-user="$ctrl.userDetails"
     data-credential="$ctrl.userCredential"
+    data-fields="$ctrl.USER_SUCCESS_BANNER"
     data-field-secret-key-label="{{:: 'pci_projects_project_storages_containers_users_add_success_field_secret_key' | translate}}"
     data-is-new-user="false"
     data-on-copy-field-click="$ctrl.onClipboardFieldClick(data)"
