--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/containers.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/containers.html
@@ -7,8 +7,10 @@
         data-user="$ctrl.createdContainerInfos.user"
         data-role="$ctrl.createdContainerInfos.role"
         data-credential="$ctrl.createdContainerInfos.userCredentials"
+        data-fields="$ctrl.USER_SUCCESS_BANNER"
         data-container-name="$ctrl.createdContainerInfos.containerName"
         data-field-secret-key-label="{{:: 'pci_projects_project_storages_cold_archives_add_container_success_secret_label' | translate}}"
+        data-on-copy-field-click="$ctrl.onClipboardFieldClick(data)"
     ></pci-projects-project-storages-components-user-credential-banner>
 
     <oui-datagrid data-rows="$ctrl.containers">
