fix(dedicated): add OS detail for dedicated server on client dashboard
ref: MANAGER-10597

Signed-off-by: David Arsène <david.arsene.ext@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/dedicated/server/dashboard/dashboard.html
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/dashboard/dashboard.html
@@ -121,8 +121,7 @@
                             ></dt>
                             <dd class="oui-tile__description">
                                 <span
-                                    data-ng-if="$ctrl.server.os"
-                                    data-ng-bind="$ctrl.server.os === 'byoi_32' ? ('server_configuration_distribution_byoi' | translate) : $ctrl.server.os"
+                                    data-ng-bind-html=":: $ctrl.getOperatingSystemLabel()"
                                 ></span>
                                 <p
                                     class="small"
