refactor(storages.components): complete refactor
ref: MANAGER-11283

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/users/users.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/users/users.html
@@ -21,6 +21,7 @@
     data-credential="$ctrl.userCredential"
     data-field-secret-key-label="{{:: 'pci_projects_project_storages_containers_users_add_success_field_secret_key' | translate}}"
     data-is-new-user="false"
+    data-on-copy-field-click="$ctrl.onClipboardFieldClick(data)"
 ></pci-projects-project-storages-components-user-credential-banner>
 
 <oui-datagrid data-rows="$ctrl.userList">
