fix(dedicated): added description to boot mode dropdown
ref: PUBM-23077
Signed-off-by: Jean-Baptiste Delon <jean-baptiste.delon@ovhcloud.com>

--- a/packages/manager/modules/bm-server-components/src/netboot/template.html
+++ b/packages/manager/modules/bm-server-components/src/netboot/template.html
@@ -55,7 +55,7 @@
                             class="form-control"
                             id="rescue"
                             name="rescue"
-                            data-ng-options="rescue as rescue.kernel for rescue in $ctrl.netboots.rescue"
+                            data-ng-options="rescue.kernel + ' - ' + rescue.description for rescue in $ctrl.netboots.rescue"
                             data-ng-model="$ctrl.currentNetboot.rescue"
                             required
                         >
