--- a/packages/manager/modules/bm-server-components/src/netboot/template.html
+++ b/packages/manager/modules/bm-server-components/src/netboot/template.html
@@ -76,12 +76,11 @@
                             class="form-control"
                             id="rescue"
                             name="rescue"
-                            data-ng-options="rescue.kernel + ' - ' + rescue.description for rescue in $ctrl.netboots.rescue"
+                            data-ng-options="rescue as rescue.kernel + ' - ' + rescue.description for rescue in $ctrl.netboots.rescue track by rescue.kernel"
                             data-ng-model="$ctrl.currentNetboot.rescue"
                             required
                         >
                             <option
-                                value=""
                                 data-ng-disabled="true"
                                 data-translate="select_option"
                             >
