feat(containers.private-registry): add region column
ref: MANAGER-11096
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

--- a/packages/manager/modules/pci/src/projects/project/private-registry/private-registry.html
+++ b/packages/manager/modules/pci/src/projects/project/private-registry/private-registry.html
@@ -43,6 +43,13 @@
                 data-sortable
             ></oui-datagrid-column>
             <oui-datagrid-column
+                data-title=":: 'private_registry_region' | translate"
+                data-property="region"
+                data-type="string"
+                data-searchable
+                data-sortable
+            ></oui-datagrid-column>
+            <oui-datagrid-column
                 data-title=":: 'private_registry_plan' | translate"
                 data-property="plan.displayName"
                 data-searchable
