feat(web): use common offers selector
ref: MANAGER-11028

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/apps/web/client/app/domain/webhosting/order/domain-webhosting-order.html
+++ b/packages/manager/apps/web/client/app/domain/webhosting/order/domain-webhosting-order.html
@@ -5,6 +5,7 @@
 </oui-back-button>
 
 <ovh-manager-web-domain-webhosting-order-steps
+    data-catalog="$ctrl.catalog"
     data-available-offers="$ctrl.availableOffers"
     data-get-available-modules="$ctrl.getAvailableModules(offer)"
     data-cart-id="$ctrl.cartId"
