--- a/packages/manager/modules/bm-server-components/src/netboot/template.html
+++ b/packages/manager/modules/bm-server-components/src/netboot/template.html
@@ -25,7 +25,7 @@
                 <div
                     class="col-md-4"
                     data-ng-repeat="(key, data) in $ctrl.netboots track by $index"
-                    data-ng-if="key !== 'power'"
+                    data-ng-if="key !== 'power' && key !== 'internal'"
                 >
                     <oui-select-picker
                         name="{{:: key }}"
