fix(dedicated): hide dropdown when (1 single) virtual disk because of hw raid controller
ref: MANAGER-11452
Signed-off-by: Jean-Baptiste Delon <jean-baptiste.delon@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/dedicated/server/installation/ovh/dedicated-server-installation-ovh.html
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/installation/ovh/dedicated-server-installation-ovh.html
@@ -478,14 +478,14 @@
                     ></span>
                     <select
                         class="form-control"
-                        data-ng-show="informations.nbDisk > 1"
+                        data-ng-show="informations.nbDisk > 1 && !canPersonnalizeRaid()"
                         data-ng-options="nbdisk as nbdisk for nbdisk in getNbDisqueList(informations.nbDisk)"
                         data-ng-model="installation.nbDiskUse"
                         data-ng-disabled="setPartition.indexSet != -1 || newPartition.display"
                     >
                     </select>
                     <strong
-                        data-ng-hide="informations.nbDisk > 1"
+                        data-ng-hide="informations.nbDisk > 1 && !canPersonnalizeRaid()"
                         data-ng-bind="informations.nbPhysicalDisk"
                     ></strong
                     >&nbsp;
