fix(dedicated): display info banner based on status
ref: MANAGER-11448

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/account/identity-documents/user-identity-documents.html
+++ b/packages/manager/apps/dedicated/client/app/account/identity-documents/user-identity-documents.html
@@ -1,5 +1,24 @@
 <!--Header section-->
 <div class="mt-2">
+    <!-- information banner for open status -->
+    <oui-message
+        data-type="info"
+        data-ng-if="$ctrl.kycStatus.status === $ctrl.KYC_STATUS.OPEN && !$ctrl.displayError"
+    >
+        <p
+            data-translate="user_account_identity_documents_verification_in_progress_info"
+        ></p>
+    </oui-message>
+    <!-- information banner for required status with additional files-->
+    <oui-message
+        data-type="info"
+        data-ng-if="$ctrl.kycStatus.status === $ctrl.KYC_STATUS.REQUIRED && !!$ctrl.kycStatus.ticketId && !$ctrl.displayError"
+    >
+        <p
+            data-translate="user_account_identity_documents_verification_waiting_info"
+        ></p>
+    </oui-message>
+
     <!--My Identity document title-->
     <p
         class="oui-heading_4 mb-1 mt-3"
@@ -49,11 +68,12 @@
                 data-multiple
                 data-maxsize="$ctrl.maximum_size"
                 data-name="files"
+                data-disabled="$ctrl.kycStatus.status === $ctrl.KYC_STATUS.OPEN"
             ></oui-file>
         </oui-field>
         <oui-form-actions
             class="mt-5"
-            data-disabled="$ctrl.form.$invalid || !$ctrl.files || $ctrl.files.length === 0"
+            data-disabled="$ctrl.form.$invalid || !$ctrl.files || $ctrl.files.length === 0 || $ctrl.kycStatus.status === $ctrl.KYC_STATUS.OPEN"
             data-on-submit="$ctrl.uploadIdentityDocuments()"
             data-submit-text="{{:: 'user_account_identity_documents_submit' | translate}}"
         ></oui-form-actions>
