--- a/packages/manager/apps/web/client/app/hosting/offer/upgrade/hosting-offer-upgrade.html
+++ b/packages/manager/apps/web/client/app/hosting/offer/upgrade/hosting-offer-upgrade.html
@@ -1,8 +1,13 @@
 <div class="row" data-ng-controller="HostingUpgradeOfferCtrl as $ctrl">
     <div class="w-100">
         <oui-back-button data-sref="^">
-            <span data-translate="hosting_order_upgrade_modal_header"></span>
         </oui-back-button>
+
+        <!--Title + description-->
+        <div class="ml-2">
+            <span class="oui-heading_4" data-translate="hosting_order_upgrade_modal_header"></span>
+            <p data-translate="hosting_order_upgrade_modal_header_description"></p>
+        </div>
 
         <oui-spinner
             data-size="l"
@@ -27,12 +32,16 @@
         >
             <oui-step-form
                 data-header="{{:: 'hosting_order_upgrade_step_header_offer' | translate }}"
+                data-valid="$ctrl.model.offer"
+                data-prevent-next="true"
             >
                 <web-component-hosting-domain-offers
                     data-ng-if="$ctrl.catalog"
                     data-user="$ctrl.user"
                     data-catalog="$ctrl.catalog"
                     data-offers="$ctrl.availableOffers"
+                    data-current-offer="$ctrl.hosting.offer"
+                    data-customer-region="$ctrl.coreConfig.getRegion()"
                     data-show-details="true"
                     data-on-offer-click="$ctrl.onHostingOfferClick(offer)"
                 >
@@ -113,44 +122,44 @@
             >
                 <table class="table table-condensed">
                     <tbody>
-                        <tr
-                            data-ng-repeat="detail in $ctrl.model.duration.details track by $index"
-                        >
-                            <th
-                                class="font-weight-normal"
-                                scope="row"
-                                data-ng-bind="detail.description"
-                            ></th>
-                            <td class="text-nowrap text-right">
-                                <strong
-                                    data-ng-bind-html="$ctrl.formatPrice(detail.totalPrice)"
-                                ></strong>
-                            </td>
-                        </tr>
+                    <tr
+                        data-ng-repeat="detail in $ctrl.model.duration.details track by $index"
+                    >
+                        <th
+                            class="font-weight-normal"
+                            scope="row"
+                            data-ng-bind="detail.description"
+                        ></th>
+                        <td class="text-nowrap text-right">
+                            <strong
+                                data-ng-bind-html="$ctrl.formatPrice(detail.totalPrice)"
+                            ></strong>
+                        </td>
+                    </tr>
                     </tbody>
                     <tfoot>
-                        <tr>
-                            <th
-                                class="text-right"
-                                scope="row"
-                                data-translate="hosting_order_upgrade_price_HT"
-                            ></th>
-                            <td
-                                class="font-weight-bold text-right"
-                                data-ng-bind="$ctrl.model.duration.prices.withoutTax.text"
-                            ></td>
-                        </tr>
-                        <tr>
-                            <th
-                                scope="row"
-                                class="text-right"
-                                data-translate="hosting_order_upgrade_price_TTC"
-                            ></th>
-                            <td
-                                class="font-weight-bold text-right"
-                                data-ng-bind="$ctrl.model.duration.prices.withTax.text"
-                            ></td>
-                        </tr>
+                    <tr>
+                        <th
+                            class="text-right"
+                            scope="row"
+                            data-translate="hosting_order_upgrade_price_HT"
+                        ></th>
+                        <td
+                            class="font-weight-bold text-right"
+                            data-ng-bind="$ctrl.model.duration.prices.withoutTax.text"
+                        ></td>
+                    </tr>
+                    <tr>
+                        <th
+                            scope="row"
+                            class="text-right"
+                            data-translate="hosting_order_upgrade_price_TTC"
+                        ></th>
+                        <td
+                            class="font-weight-bold text-right"
+                            data-ng-bind="$ctrl.model.duration.prices.withTax.text"
+                        ></td>
+                    </tr>
                     </tfoot>
                 </table>
                 <oui-message data-type="info">
