fix(pci): disable kubeconfig file if its installing
ref: DTRSD-113986

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/kubernetes/details/service/service.html
+++ b/packages/manager/modules/pci/src/projects/project/kubernetes/details/service/service.html
@@ -290,7 +290,7 @@
                         <oui-button
                             data-variant="link"
                             data-ng-click="$ctrl.downloadConfigFile()"
-                            data-disabled="$ctrl.loadingKubeConfig"
+                            data-disabled="$ctrl.loadingKubeConfig || $ctrl.isKubernetesInstalling"
                         >
                             <span data-ng-bind="$ctrl.CONFIG_FILENAME"></span>
                         </oui-button>
