feat: adapt app dashboard for partners
DATATR-284

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/ai/apps/dashboard/dashboard.html
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/dashboard/dashboard.html
@@ -9,6 +9,7 @@
             ><span data-translate="pci_apps_dashboard_info_tab_title"></span>
         </oui-header-tabs-item>
         <oui-header-tabs-item
+            data-ng-if="!$ctrl.app.partner"
             data-href="{{:: $ctrl.attachDataLink }}"
             data-active="$ctrl.currentActiveLink() === $ctrl.attachDataLink"
             ><span
