--- a/packages/manager/modules/pci/src/projects/project/ai/apps/apps.html
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/apps.html
@@ -56,7 +56,10 @@
             data-filterable
         >
             <div data-ng-if="!$row.gpu" class="d-flex">
-                <span class="oui-icon oui-icon-component_concept mr-1"></span>
+                <span
+                    class="oui-icon oui-icon-component_concept mr-1"
+                    aria-hidden="true"
+                ></span>
                 <span
                     data-translate="pci_ai_app_list_resources_cpu"
                     data-translate-values="{cpu: $row.cpu, replicas: $row.replicas}"
@@ -65,6 +68,7 @@
             <div data-ng-if="$row.gpu" class="d-flex">
                 <span
                     class="oui-icon oui-icon-hardware-gpu_concept mr-1"
+                    aria-hidden="true"
                 ></span>
                 <span
                     data-translate="pci_ai_app_list_resources_gpu"
