--- a/packages/manager/apps/dedicated/client/app/dedicated/server/dashboard/dashboard.html
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/dashboard/dashboard.html
@@ -664,6 +664,7 @@
                         data-order-public-link="$ctrl.orderPublicBandwidthLink"
                         data-server="$ctrl.server"
                         data-specifications="$ctrl.specifications"
+                        data-service-id="$ctrl.serviceInfos.serviceId"
                     >
                     </server-bandwidth-dashboard>
 
