--- a/packages/manager/modules/pci/src/projects/project/training/training.html
+++ b/packages/manager/modules/pci/src/projects/project/training/training.html
@@ -46,6 +46,19 @@
         </oui-guide-menu>
     </oui-header>
 
+    <oui-message data-type="info" dismissable>
+        <span
+            data-translate="pci_projects_project_training_jobs_user_and_roles_info"
+        ></span>
+        <p class="m-0">
+            <a
+                rel="noopener"
+                data-translate="pci_projects_project_training_jobs_user_and_roles_info_link"
+                data-ng-click="$ctrl.goToUsersAndTokens()"
+            ></a>
+        </p>
+    </oui-message>
+
     <!--Banner section messages-->
     <section>
         <pci-maintenance-banner
