--- a/packages/manager/modules/pci/src/projects/project/notebooks/notebooks.html
+++ b/packages/manager/modules/pci/src/projects/project/notebooks/notebooks.html
@@ -19,6 +19,19 @@
         </oui-guide-menu>
     </oui-header>
 
+    <oui-message data-type="info" dismissable>
+        <span
+            data-translate="pci_ai_dashboard_banner_user_and_roles_info"
+        ></span>
+        <p class="m-0">
+            <a
+                rel="noopener"
+                data-translate="pci_ai_dashboard_banner_user_and_roles_info_link"
+                data-ng-click="$ctrl.goToUsersAndTokens()"
+            ></a>
+        </p>
+    </oui-message>
+
     <pci-maintenance-banner
         data-steins="$ctrl.steins"
         data-customer-regions="$ctrl.customerRegions"
