--- a/packages/manager/modules/iam/src/onboarding/onboarding.template.html
+++ b/packages/manager/modules/iam/src/onboarding/onboarding.template.html
@@ -8,7 +8,7 @@
         <a
             class="mt-3 oui-button oui-button_primary oui-button_l text-light"
             data-translate="iam_onboarding_cta_1"
-            ui-sref="iam.createPolicy"
+            ui-sref="iam.policy.create"
             target="_self"
             rel="noopener"
         >
