feat(dedicated.nutanix): display hardware tile based on cluster type
ref: MANAGER-11507

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/modules/nutanix/src/dashboard/nodes/node/general-info/template.html
+++ b/packages/manager/modules/nutanix/src/dashboard/nodes/node/general-info/template.html
@@ -124,7 +124,10 @@
         </div>
 
         <!-- TECHNICAL DETAILS -->
-        <div class="col-md-4" data-ng-if="$ctrl.technicalDetails">
+        <div
+            class="col-md-4"
+            data-ng-if="$ctrl.technicalDetails && $ctrl.isNewCluster"
+        >
             <server-technical-details
                 technical-details="$ctrl.technicalDetails"
             ></server-technical-details>
