--- a/packages/manager/modules/nutanix/src/dashboard/general-info/template.html
+++ b/packages/manager/modules/nutanix/src/dashboard/general-info/template.html
@@ -223,7 +223,7 @@
     </div>
 
     <!-- TECHNICAL DETAILS -->
-    <div class="col-md-6 col-lg-4 mb-3">
+    <div class="col-md-6 col-lg-4 mb-3" data-ng-if="!$ctrl.isNewCluster">
         <server-technical-details
             technical-details="$ctrl.technicalDetails"
         ></server-technical-details>
