fix(nutanix): upgrade private bandwidth (#9200)
ref: MANAGER-11472

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/dedicated/server/dashboard/dashboard.html
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/dashboard/dashboard.html
@@ -663,6 +663,7 @@
                         data-order-public-link="$ctrl.orderPublicBandwidthLink"
                         data-server="$ctrl.server"
                         data-specifications="$ctrl.specifications"
+                        data-service-id="$ctrl.serviceInfos.serviceId"
                     >
                     </server-bandwidth-dashboard>
 
