feat(dedicated): enable modify bandwidth based on cluster type
ref: MANAGER-11514

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/modules/bm-server-components/src/bandwidth-dashboard/dashboard.html
+++ b/packages/manager/modules/bm-server-components/src/bandwidth-dashboard/dashboard.html
@@ -90,7 +90,7 @@
     </oui-tile-description>
 </oui-tile-definition>
 <oui-tile-button
-    data-ng-if="!$ctrl.server.isExpired && $ctrl.server.canOrderVrackBandwith"
+    data-ng-if="!$ctrl.server.isExpired && $ctrl.server.canOrderVrackBandwith && !$ctrl.isOldCluster"
     data-disabled="$ctrl.server.state === 'HACKED' || $ctrl.server.state === 'HACKED_BLOCKED'"
     data-href="{{ $ctrl.orderPrivateLink }}"
 >
