--- a/packages/manager/modules/nutanix/src/dashboard/general-info/private-bandwidth-upgrade/template.html
+++ b/packages/manager/modules/nutanix/src/dashboard/general-info/private-bandwidth-upgrade/template.html
@@ -6,4 +6,5 @@
     tracking-prefix="$ctrl.trackingPrefix"
     user="$ctrl.user"
     on-error="$ctrl.handleError(error)"
+    is-old-cluster="$ctrl.isOldCluster"
 ></nutanix-cluster-order-private-bandwidth>
