--- a/packages/manager/modules/nutanix/src/dashboard/nodes/node/general-info/bandwidth-private-order/template.html
+++ b/packages/manager/modules/nutanix/src/dashboard/nodes/node/general-info/bandwidth-private-order/template.html
@@ -10,4 +10,5 @@
     specifications="$ctrl.specifications"
     user="$ctrl.user"
     service-id="$ctrl.serviceId"
+    is-cluster-node="true"
 ></server-order-private-bandwidth>
