--- a/packages/manager/modules/nutanix/src/dashboard/nodes/node/general-info/template.html
+++ b/packages/manager/modules/nutanix/src/dashboard/nodes/node/general-info/template.html
@@ -171,6 +171,7 @@
                         data-order-public-link="$ctrl.orderPublicBandwidthLink"
                         data-server="$ctrl.server"
                         data-specifications="$ctrl.specifications"
+                        data-is-old-cluster="$ctrl.isOldCluster"
                     >
                     </server-bandwidth-dashboard>
                 </div>
