--- a/packages/manager/modules/nutanix/src/dashboard/general-info/template.html
+++ b/packages/manager/modules/nutanix/src/dashboard/general-info/template.html
@@ -218,6 +218,7 @@
             on-error="$ctrl.handleError(error)"
             go-to-upgrade-private-bandwidth="$ctrl.goToUpgradePrivateBandwidth"
             private-bandwidth-service-id="$ctrl.privateBandwidthServiceId"
+            is-old-cluster="$ctrl.isOldCluster"
         >
         </nutanix-network-tile>
     </div>
