feat(iplb): display https protocol
ref: DTRSD-81055

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/modules/iplb/src/frontends/iplb-frontends.html
+++ b/packages/manager/modules/iplb/src/frontends/iplb-frontends.html
@@ -25,7 +25,7 @@
             data-property="protocol"
             data-sortable
         >
-            {{ $row.protocol | uppercase }}
+            {{ $row.displayProtocol | uppercase }}
             <span data-ng-show="$row.port">: {{ $row.port }}</span>
         </oui-datagrid-column>
         <oui-datagrid-column
