--- a/packages/manager/modules/bm-server-components/src/order-private-bandwidth/private-order.html
+++ b/packages/manager/modules/bm-server-components/src/order-private-bandwidth/private-order.html
@@ -65,6 +65,10 @@
                     <span
                         data-translate="server_order_bandwidth_warning"
                     ></span>
+                    <span
+                        data-ng-if="$ctrl.isClusterNode"
+                        data-translate="server_node_order_bandwidth_warning"
+                    ></span>
                 </oui-message>
             </form>
         </div>
