--- a/packages/manager/apps/dedicated/client/app/account/identity-documents/user-identity-documents.html
+++ b/packages/manager/apps/dedicated/client/app/account/identity-documents/user-identity-documents.html
@@ -35,10 +35,14 @@
         data-translate="user_account_identity_documents_sub_title"
     ></p>
     <!--My Identity document description-->
-    <span
-        class="oui-tile__body"
-        data-translate="user_account_identity_documents_descriptiom"
-    ></span>
+    <p class="oui-tile__body">
+        <span
+            data-translate="{{'user_account_identity_documents_list_for_' + $ctrl.user_type}}"
+        ></span>
+        <span
+            data-translate="user_account_identity_documents_descriptiom"
+        ></span>
+    </p>
 </div>
 <!--End of Header section-->
 
