feat(dedicated): css suggestion and bug fix
ref: MANAGER-11555

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/account/identity-documents/user-identity-documents.html
+++ b/packages/manager/apps/dedicated/client/app/account/identity-documents/user-identity-documents.html
@@ -1,5 +1,9 @@
 <!--Header section-->
 <div class="mt-2">
+    <p
+        class="oui-heading_4"
+        data-translate="user_account_identity_documents"
+    ></p>
     <!-- information banner for open status -->
     <oui-message
         data-type="info"
@@ -21,7 +25,7 @@
 
     <!--My Identity document title-->
     <p
-        class="oui-heading_4 mb-1 mt-3"
+        class="oui-heading_3 mb-1 mt-3"
         data-translate="user_account_identity_documents"
     ></p>
     <!--My Identity document description-->
@@ -31,7 +35,7 @@
     ></p>
     <!--My Identity document sub-title-->
     <p
-        class="oui-heading_4 mb-1 mt-3"
+        class="oui-heading_3 mb-1 mt-3"
         data-translate="user_account_identity_documents_sub_title"
     ></p>
     <!--My Identity document description-->
