--- a/packages/manager/apps/web/client/app/hosting/database/DATABASE.html
+++ b/packages/manager/apps/web/client/app/hosting/database/DATABASE.html
@@ -1,7 +1,7 @@
 <div data-ng-controller="HostingTabDatabasesCtrl as $ctrl" ui-view>
     <div data-ovh-alert="{{alerts.main}}"></div>
 
-    <div data-ng-if="$ctrl.hosting.offer === 'START_10_M'">
+    <div data-ng-if="$ctrl.isFreeHosting()">
         <p
             data-translate="hosting_dashboard_service_change_offer_explanation"
         ></p>
@@ -16,14 +16,19 @@
                 data-translate="hosting_dashboard_service_change_offer_explanation_db"
             ></li>
         </ul>
+        <oui-button data-disabled>
+            <span
+                data-translate="hosting_tab_DATABASES_configuration_create_title_button"
+            ></span>
+        </oui-button>
         <a
             class="btn btn-link"
-            data-translate="hosting_dashboard_service_change_offer_now"
+            data-translate="hosting_dashboard_service_change_offer"
             data-ui-sref="app.hosting.dashboard.upgrade({ productId: $ctrl.hosting.serviceName })"
         ></a>
     </div>
 
-    <div data-ng-if="$ctrl.hosting.offer !== 'START_10_M'">
+    <div data-ng-if="!$ctrl.isFreeHosting()">
         <div
             class="text-center"
             data-ng-if="$ctrl.loading.init || $ctrl.loading.orderCapabilities"
