feat(pci): add guide advice for windows private mode vrack
ref: MANAGER-11052

Signed-off-by: Quentin Pavy <contact@quentinpavy.com>

--- a/packages/manager/modules/pci/src/projects/project/instances/add/add.html
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/add.html
@@ -499,6 +499,35 @@
                     </a>
                 </p>
             </oui-message>
+            <oui-message
+                data-type="info"
+                data-ng-if="$ctrl.isWindowsImageType()"
+            >
+                <p
+                    data-translate="pci_projects_project_instances_windows_private_mode_description1"
+                ></p>
+                <p>
+                    <span
+                        data-translate="pci_projects_project_instances_windows_private_mode_description2"
+                    >
+                    </span>
+                    <a
+                        class="oui-link oui-link_icon"
+                        data-ng-href="{{:: $ctrl.windowsPrivateModeLicenseGuideUrl }}"
+                        target="_blank"
+                        data-track-on="click"
+                        data-track-name="PublicCloud::pci::projects::project::instances::add::guide-activate-windows-license-in-private-mode"
+                    >
+                        <span
+                            data-translate="pci_projects_project_instances_windows_private_mode_description3"
+                        ></span>
+                        <span
+                            class="oui-icon oui-icon-arrow-right"
+                            aria-hidden="true"
+                        ></span>
+                    </a>
+                </p>
+            </oui-message>
         </div>
         <div data-ng-if="$ctrl.isAttachFloatingIP && $ctrl.isPrivateMode()">
             <oui-spinner
