--- a/packages/manager/apps/web/client/app/hosting/database/DATABASE.html
+++ b/packages/manager/apps/web/client/app/hosting/database/DATABASE.html
@@ -28,7 +28,7 @@
         ></a>
     </div>
 
-    <div data-ng-if="!$ctrl.isFreeHosting()">
+    <div data-ng-if="!$ctrl.isFreeHosting()" class="mt-3">
         <div
             class="text-center"
             data-ng-if="$ctrl.loading.init || $ctrl.loading.orderCapabilities"
@@ -43,42 +43,17 @@
                 data-translate="hosting_tab_DATABASES_configuration_quota_info_calculation_period"
             ></p>
             <p
+                class="d-inline"
                 data-translate="hosting_tab_DATABASES_configuration_quota_warning_message"
             ></p>
-            <p
-                data-translate="hosting_tab_DATABASES_configuration_quota_warning_resolution"
-            ></p>
+            <button
+                type="button"
+                class="oui-popover-button"
+                data-oui-popover="{{ 'hosting_tab_DATABASES_configuration_quota_warning_resolution' | translate }}"
+                data-oui-popover-placement="right"
+            ></button>
 
-            <oui-message ng-if="!$ctrl.canCreateDatabase" type="info">
-                <span
-                    data-translate="hosting_tab_DATABASES_configuration_create_step1_no_db_left"
-                ></span>
-
-                <ul>
-                    <li data-ng-if="$ctrl.canOrderPublic">
-                        <a
-                            data-translate="hosting_tab_DATABASES_configuration_order_title_button_public"
-                            data-ui-sref="app.hosting.dashboard.database.order-public"
-                        ></a>
-                    </li>
-                    <li
-                        data-ng-if="hosting.sqlPriveInfo.nbDataBaseInclude > 0 && hosting.sqlPriveInfo.nbDataBaseActive < hosting.sqlPriveInfo.nbDataBaseInclude"
-                    >
-                        <a
-                            data-translate="hosting_dashboard_service_privatesql_active_long"
-                            data-ui-sref="app.hosting.dashboard.database.private-sql-activation"
-                        ></a>
-                    </li>
-                    <li>
-                        <a
-                            data-translate="hosting_tab_DATABASES_configuration_order_title_button_private"
-                            data-ui-sref="app.private-database-order-clouddb"
-                        ></a>
-                    </li>
-                </ul>
-            </oui-message>
-
-            <div data-ng-if="!$ctrl.hasResult">
+            <div class="mt-3" data-ng-if="!$ctrl.hasResult">
                 <oui-button
                     data-ng-click="setAction('database/add/hosting-database-add')"
                     data-ng-if="$ctrl.canCreateDatabase"
@@ -87,72 +62,62 @@
                         data-translate="hosting_tab_DATABASES_configuration_create_title_button"
                     ></span>
                 </oui-button>
-
-                <div
-                    class="alert alert-info mt-3"
-                    role="alert"
-                    data-translate="hosting_tab_DATABASES_table_empty"
-                ></div>
             </div>
 
-            <div class="mt-5" data-ng-if="$ctrl.hasResult">
+            <div class="mt-3" data-ng-if="$ctrl.hasResult">
+                <p
+                    data-translate="hosting_dashboard_service_change_offer_explanation_only_one"
+                    data-ng-if="!$ctrl.canCreateDatabase"
+                ></p>
                 <div class="row mb-3">
                     <div class="col-xs-6">
-                        <div
-                            class="btn-group"
-                            data-ng-if="$ctrl.canCreateDatabase"
-                            data-uib-dropdown
-                        >
-                            <button
-                                type="button"
-                                class="oui-button oui-button_dropdown mb-0"
-                                aria-haspopup="true"
-                                aria-expanded="false"
-                                data-uib-dropdown-toggle
-                            >
-                                <span data-translate="common_actions"
-                                    >Actions</span
-                                >
+                        <div data-ng-if="!$ctrl.canCreateDatabase">
+                            <oui-button data-disabled>
                                 <span
-                                    class="oui-icon oui-icon-chevron-down"
-                                    aria-hidden="true"
+                                    data-translate="hosting_tab_DATABASES_configuration_create_title_button"
                                 ></span>
-                            </button>
-                            <ul class="dropdown-menu" data-uib-dropdown-menu>
-                                <li>
-                                    <button
-                                        class="btn btn-link"
-                                        type="button"
-                                        data-translate="hosting_tab_DATABASES_configuration_create_title_button"
-                                        data-ng-click="setAction('database/add/hosting-database-add')"
-                                    ></button>
-                                </li>
-                                <li data-ng-if="$ctrl.canOrderPublic">
-                                    <a
-                                        data-translate="hosting_tab_DATABASES_configuration_order_title_button_public"
-                                        data-ui-sref="app.hosting.dashboard.database.order-public"
-                                    ></a>
-                                </li>
-                                <li
-                                    data-ng-if="hosting.sqlPriveInfo.hasPrivateDatabaseToActivate"
-                                >
-                                    <a
-                                        class="btn btn-link"
-                                        data-translate="hosting_dashboard_service_privatesql_active_long"
-                                        data-ui-sref="app.hosting.dashboard.database.private-sql-activation"
-                                    >
-                                    </a>
-                                </li>
-                                <li>
-                                    <a
-                                        class="btn btn-link"
-                                        data-translate="hosting_tab_DATABASES_configuration_order_title_button_private"
-                                        data-ui-sref="app.private-database-order-clouddb"
-                                    >
-                                    </a>
-                                </li>
-                            </ul>
+                            </oui-button>
+                            <a
+                                class="btn btn-link"
+                                data-translate="hosting_dashboard_service_change_offer"
+                                data-ui-sref="app.hosting.dashboard.upgrade({ productId: $ctrl.hosting.serviceName })"
+                            ></a>
                         </div>
+                        <oui-action-menu
+                            data-text="{{ 'common_actions' | translate }}"
+                            data-ng-if="$ctrl.canCreateDatabase"
+                        >
+                            <oui-action-menu-item
+                                data-on-click="setAction('database/add/hosting-database-add')"
+                            >
+                                <span
+                                    data-translate="hosting_tab_DATABASES_configuration_create_title_button"
+                                ></span>
+                            </oui-action-menu-item>
+                            <oui-action-menu-item
+                                data-ng-if="$ctrl.canOrderPublic"
+                                data-ui-sref="app.hosting.dashboard.database.order-public"
+                            >
+                                <span
+                                    data-translate="hosting_tab_DATABASES_configuration_order_title_button_public"
+                                ></span>
+                            </oui-action-menu-item>
+                            <oui-action-menu-item
+                                data-ng-if="hosting.sqlPriveInfo.hasPrivateDatabaseToActivate"
+                                data-ui-sref="app.hosting.dashboard.database.private-sql-activation"
+                            >
+                                <span
+                                    data-translate="hosting_dashboard_service_privatesql_active_long"
+                                ></span>
+                            </oui-action-menu-item>
+                            <oui-action-menu-item
+                                data-ui-sref="app.private-database-order-clouddb"
+                            >
+                                <span
+                                    data-translate="hosting_tab_DATABASES_configuration_order_title_button_private"
+                                ></span>
+                            </oui-action-menu-item>
+                        </oui-action-menu>
                     </div>
                     <div class="col-xs-6">
                         <form
