feat(web): new offers for sql order page
ref: MANAGER-11000

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/apps/web/client/app/hosting/database/DATABASE.html
+++ b/packages/manager/apps/web/client/app/hosting/database/DATABASE.html
@@ -96,7 +96,7 @@
                             </oui-action-menu-item>
                             <oui-action-menu-item
                                 data-ng-if="$ctrl.canOrderPublic"
-                                data-ui-sref="app.hosting.dashboard.database.order-public"
+                                data-ui-sref="app.hosting.dashboard.database.order-public({preselectDbCategory: 'private'})"
                             >
                                 <span
                                     data-translate="hosting_tab_DATABASES_configuration_order_title_button_public"
