feat(dedicated.carbon): add main page for carbon footprint billing
ref: MANAGER-11511

Signed-off-by: David Arsène <david.arsene.ext@ovhcloud.com>

--- a/packages/manager/modules/carbon-calculator/src/dashboard/template.html
+++ b/packages/manager/modules/carbon-calculator/src/dashboard/template.html
@@ -1,1 +1,12 @@
-<span>Carbon footprint dashboard</span>
+<div>
+    <oui-header
+        data-heading="{{:: 'carbon_calculator_my_carbon_footprint' | translate }}"
+    >
+    </oui-header>
+    <p
+        class="row-fluid"
+        data-translate="carbon_calculator_dashboard_carbon_footprint_explanation"
+    ></p>
+    <carbon-balance-composition></carbon-balance-composition>
+    <carbon-footprint></carbon-footprint>
+</div>
