--- a/packages/manager/apps/carbon-calculator/src/index.html
+++ b/packages/manager/apps/carbon-calculator/src/index.html
@@ -9,7 +9,7 @@
             }
         </style>
     </head>
-    <body class="container-fluid">
+    <body class="container-fluid px-md-5 mt-3">
         <ui-router-breadcrumb></ui-router-breadcrumb>
         <div data-ui-view></div>
     </body>
